# ITL.SwingAgent

./: .env.example  .gitignore  CNPG_SETUP.md  DATABASE_MIGRATION.md  EXTERNAL_DATABASES.md  IMPLEMENTATION_SUMMARY.md  README.md  database_demo.py  instructions.md  mkdocs.yml  pyproject.toml  recommendations.md  test_database.py
.github/: copilot-instructions.md
docs/: README.md  api-reference.md  architecture.md  best-practices.md  configuration.md  deployment.md  development.md  faq.md  getting-started.md  glossary.md  index.md  performance-tuning.md  security.md  testing.md  troubleshooting.md  tutorial.md  use-cases.md
docs/adr/: 001-centralized-database.md  002-vector-store-design.md  003-llm-integration-strategy.md  004-fibonacci-strategy.md  005-multitimeframe-analysis.md  README.md
k8s/: cronjobs.yaml
k8s/cnpg/: README.md  cluster.yaml  config.yaml  deploy.sh  deployment.yaml  monitoring.yaml  secrets.yaml
scripts/: analyze_performance.py  backfill_vector_store.py  backtest_generate_signals.py  db_info.py  eval_signals.py  filter_events.py  optimize_params.py  portfolio_backtest.py  pre_market_scan.py  run_swing_agent.py  test_cnpg.py  train_ml_model.py
site/: 404.html  index.html
site/api-reference/: index.html
site/architecture/: index.html
site/best-practices/: index.html
site/configuration/: index.html
site/deployment/: index.html
site/development/: index.html
site/faq/: index.html
site/getting-started/: index.html
site/glossary/: index.html
site/search/: search_index.json
site/security/: index.html
watchlists/: ai_watchlist.txt  events_example.csv
(+25 files in other folders)
